main/default/objects/Release_Item__c/Release_Item__c.object-meta.xml
<CustomObject>
    <label>Release Item</label>
    <nameField>
        <displayFormat>RI{00000}</displayFormat>
        <label>Release Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>