main/default/objects/Release_Item__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Release Items</relationshipLabel>
    <relationshipName>Release_Items</relationshipName>
    <type>Lookup</type>
</CustomField>