main/default/objects/Release_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Release Items</relationshipLabel>
    <relationshipName>Release_Items</relationshipName>
    <type>Lookup</type>
</CustomField>