main/default/objects/Release_Item__c/fields/Destination_Organization__c.field-meta.xml
<CustomField>
    <fullName>Destination_Organization__c</fullName>
    <label>Destination Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organization</valueSetName>
    </valueSet>
</CustomField>