main/default/objects/Release_Item__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <formula>IF(TEXT(Source_Organization__c) &lt;&gt; null, TEXT(Source_Organization__c) + &apos; to &apos; +  TEXT(Destination_Organization__c), TEXT(Destination_Organization__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direction</label>
    <type>Text</type>
</CustomField>