main/default/objects/Release_Item__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&quot;https://ulapp-developers.force.com/projects/s/detail/&quot;+Id, &quot;View Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>