main/default/objects/Release_Item__c/fields/Permission_Sets_and_Profile_Updates__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets_and_Profile_Updates__c</fullName>
    <formula>Release__r.Permission_Sets_and_Profile_Updates__c</formula>
    <inlineHelpText>Excel file to monitor the changes made for Permission sets  and profiles.</inlineHelpText>
    <label>Permission Sets and Profile Updates</label>
    <type>Text</type>
</CustomField>