main/default/objects/Release_Item__c/fields/Post_Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Post_Deployment_Steps__c</fullName>
    <label>Post-Deployment Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>