main/default/objects/Release_Item__c/fields/Pre_Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deployment_Steps__c</fullName>
    <label>Pre-Deployment Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>