main/default/objects/Release_Item__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Release Items</relationshipLabel>
    <relationshipName>Release_Items</relationshipName>
    <type>Lookup</type>
</CustomField>