main/default/objects/Release_Item__c/fields/Project_Task_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_Title__c</fullName>
    <formula>Project_Task__r.Title__c</formula>
    <label>Project Task Title</label>
    <type>Text</type>
</CustomField>