main/default/objects/Release_Item__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Release Items</relationshipLabel>
    <relationshipName>Release_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>