main/default/objects/Release_Item__c/fields/Release_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Release_Item_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Release_Item_Status</valueSetName>
    </valueSet>
</CustomField>