main/default/objects/Release_Item__c/fields/Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Status_Detail__c</fullName>
    <label>Status Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>