main/default/objects/Release_Item__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>&apos;Organizations: &apos; +  TEXT(Source_Organization__c) + &apos; to &apos; +  TEXT(Destination_Organization__c) + BR() +
&apos;Pull Request URL: &apos; +  Pull_Request_URL__c + BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary</label>
    <type>Text</type>
</CustomField>