main/default/objects/Release_Item__c/validationRules/Is_Status_Detail_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Status_Detail_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Status_Detail__c),
ISPICKVAL(Release_Item_Status__c,&quot;Ready for Deployment&quot;))</errorConditionFormula>
    <errorDisplayField>Status_Detail__c</errorDisplayField>
    <errorMessage>Add Pre Deployment Steps, Deployment Steps and Post Deployment Steps</errorMessage>
</ValidationRule>